# Word-level-Arabic-Sign-language

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  api.py  cv2_utils.py  dataloader.py  dataset.py  dataset_preprocessing.py  docker-compose.yml  draw_kps.py  export.py  lazy_dataset.py  live_frame_processing.py  mediapipe_utils.py  mem_map_dataset.py  model.py  onnx_benchmark.py  perlite-ngnix.conf  prepare_kps.py  pyproject.toml  run.py  run_script.bat  train.py  utils.py  wl-ar-sl  wl-ar-sl.ipynb
.agent/workflows/: GUIDE.md  sync-docs.md  update-readme.md
.github/workflows/: deploy-docs.yaml
data/: KARSL-502_Labels.json  KARSL-502_Labels.xlsx  convert-samples-jpg-mp4.py  face_mesh_symmetry_map.npy  simplified_face_connections.json
docs/: DOCS_GUIDE.md  README.md  SOURCE_DOCS_GUIDE.md  architecture_overview.md  getting-started.md  getting_started.md  index.md  metadata.json
docs/api/: fastapi_application.md  live_processing_pipeline.md  websocket_communication.md
docs/core/: keypoint_visualization.md  mediapipe_integration.md
docs/data/: data_preparation_pipeline.md  dataset_overview.md  memory_mapped_datasets.md
docs/deployment/: docker_setup.md  environment_configuration.md
docs/development/: contributing_guide.md  makefile_commands.md  project_structure.md
docs/frontend/: web_interface_design.md  websocket_client_implementation.md
docs/indexes/: class_index.md  function_index.md
docs/models/: architecture_design.md  onnx_export_process.md  training_process.md
docs/reference/: api_endpoints.md  configuration_options.md  dataset_citation.md  troubleshooting.md
models/: AttentionBiLSTM-20epochs-signs_502.onnx  STTransformer-30epochs-signs_502_s_4_6.pth.onnx  last-checkpoint-words_502.pth.onnx  last-checkpoint-words_502.pth.onnx.data
quartz-config/: quartz.config.ts  quartz.layout.ts
scripts/: generate_mediapipe_face_symmetry_map.py  generate_mediapipe_simplified_face_kps.py  standalone-mediapipe.py  sync_docs_metadata.py  sync_quartz_configs.py  write_simplified_contours_to_json.py
src/: Makefile  dataloader.py  draw_kps.py  export.py  lazy_dataset.py  model.py  onnx_benchmark.py  prepare_kps.py  utils.py
src/api/: cv2_utils.py  live_processing.py  main.py  run.py  websocket.py
src/app/: api.py  cv2_utils.py  live_frame_processing.py  run.py
src/core/: constants.py  draw_kps.py  mediapipe_utils.py  utils.py
src/data/: __init__.py  data_augmentation.py  data_preparation.py  dataloader.py  dataset.py  dataset_preprocessing.py  debug_live_viz.py  debug_train_kps.py  generate_mediapipe_face_symmetry_map.py  lazy_dataset.py  mediapipe_contours.py  mem_map_dataset.py  mmap_dataset.py  mmap_dataset_preprocessing.py  prepare_kps.py  prepare_npz_kps.py  shared_elements.py  write-signs-to-json.py  write_signs_to_json.py
static/: index.html  live-signs.html  live-signs.js  simplified_kps_connections.json  styles.css
(+56 files in other folders)
