[project]
name = "arabic-sign-language-recognition"
version = "0.1.0"
description = "Real-time Arabic Sign Language recognition system using MediaPipe and Attention-based BiLSTM on KArSL-502 dataset."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "mediapipe==0.10.21",
    "numpy<2",
    "onnx==1.18.0",
    "onnxruntime>=1.23.2",
    "onnxscript==0.2.7",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "torch==2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.40.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
