[project]
name = "arabic-sign-language-recognition"
version = "0.1.0"
description = "Real-time Arabic Sign Language recognition system using MediaPipe and Attention-based BiLSTM on KArSL-502 dataset."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "mediapipe==0.10.21",
    "numpy<2",
    "onnx==1.18.0",
    "onnxruntime>=1.23.2",
    "onnxscript==0.2.7",
    "opencv-python-headless>=4.11.0.86",
    "uvicorn[standard]>=0.40.0",
]

[project.optional-dependencies]
torch-cpu = ["torch==2.7.1", "torchvision==0.22.1"]
torch-cuda = ["torch==2.7.1", "torchvision==0.22.1"]

[tool.uv]
conflicts = [[{ extra = "torch-cpu" }, { extra = "torch-cuda" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "torch-cpu" },
    { index = "pytorch-cu126", marker = "sys_platform != 'darwin'", extra = "torch-cuda" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "torch-cpu" },
    { index = "pytorch-cu126", marker = "sys_platform != 'darwin'", extra = "torch-cuda" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true


[dependency-groups]
dev = [
    "tqdm>=4.67.1",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "plotly>=6.5.2",
    "streamlit>=1.53.0",
]
